--- a/scenarios/07_Confrontation.cfg
+++ b/scenarios/07_Confrontation.cfg
@@ -209,7 +209,7 @@
             id="Gwiti Ha'atel"
         [/scroll_to_unit]
 
-        {APPEND_MUSIC tide_of_battle.ogg}
+        {APPEND_MUSIC vengeful.ogg}
 
         [objectives]
             [objective]
