--- a/_main.cfg
+++ b/_main.cfg
@@ -34,7 +34,7 @@
     {CAMPAIGN_DIFFICULTY EASY     "data/add-ons/The_Dark_Hordes/images/units/deathmaster.png~RC(magenta>red)" ( _ "Walker") ( _ "Easy")}
     {CAMPAIGN_DIFFICULTY NORMAL   "data/add-ons/The_Dark_Hordes/images/units/grimreaper.png~RC(magenta>red)"  ( _ "Master") ( _ "Normal")} {DEFAULT_DIFFICULTY}
     {CAMPAIGN_DIFFICULTY HARD     "data/add-ons/The_Dark_Hordes/images/units/demilich.png~RC(magenta>red)"    ( _ "Reaper") ( _ "Hard")}
-    {CAMPAIGN_DIFFICULTY DEBUG    "data/add-ons/The_Dark_Hordes/images/units/dread-lich.png~RC(magenta>red)"  ( _ "Keeper") ( _ "Debug")}
+    {CAMPAIGN_DIFFICULTY DEVELOP  "data/add-ons/The_Dark_Hordes/images/units/dread-lich.png~RC(magenta>red)"  ( _ "Keeper") ( _ "Develop")}
 
     name= _ "The Dark Hordes"+"
 "+{PART_SUBTITLE}
@@ -96,8 +96,8 @@
     {NAME}={HARD_VALUE}
 #endif
 
-#ifdef DEBUG
-    {NAME}={NORMAL_VALUE}
+#ifdef DEVELOP
+    {NAME}={EASY_VALUE}
 #endif
 #enddef
 
