--- a/macros/storytxt.cfg
+++ b/macros/storytxt.cfg
@@ -2,10 +2,10 @@
 
 #define STORYTXT_INTRO
     [story]
-#ifdef DEBUG
+#ifdef DEVELOP
         [part]
             music=data/core/sounds/ambient/wardrums.ogg
-            story= _ "Difficulty Debug is for testing by the developer. It corresponds to Normal."
+            story= _ "Difficulty Develop is for testing by the developer. It corresponds to Normal."
         [/part]
 #endif
         [part]
