--- a/_main.cfg
+++ b/_main.cfg
@@ -97,7 +97,7 @@
 #endif
 
 #ifdef DEVELOP
-    {NAME}={EASY_VALUE}
+    {NAME}={BEGINNER_VALUE}
 #endif
 #enddef
 
@@ -115,8 +115,6 @@
 
 {~add-ons/The_Dark_Hordes/mainline-strings.cfg}
 {~add-ons/The_Dark_Hordes/macros}
-
-{campaigns/Under_the_Burning_Suns/utils/abilities.cfg}
 
 [+units]
     {~add-ons/The_Dark_Hordes/units}
