--- a/macros/macros.cfg
+++ b/macros/macros.cfg
@@ -8,6 +8,29 @@
     [/capture_village]
 #enddef
 
+#define CONTROLLER GOAL_X GOAL_Y
+#ifdef DEVELOP
+    controller=ai
+    [ai]
+        [goal]
+            name=protect_unit
+            [criteria]
+                side=1
+                canrecruit=yes
+            [/criteria]
+            protect_radius=10
+            value=20.0
+        [/goal]
+        [leader_goal]
+            x={GOAL_X}
+            y={GOAL_Y}
+        [/leader_goal]
+    [/ai]
+#else
+    controller=human
+#endif
+#enddef
+
 #define DELAY TIMEOUT
     [delay]
         time={TIMEOUT}
