--- a/macros/storytxt.cfg
+++ b/macros/storytxt.cfg
@@ -2,12 +2,14 @@
 
 #define STORYTXT_INTRO
     [story]
-#ifdef DEVELOP
         [part]
-            music=data/core/sounds/ambient/wardrums.ogg
-            story= _ "Difficulty Develop is for testing by the developer. It corresponds to Normal."
+            music="data/core/sounds/ambient/wardrums.ogg"
+            story= _ "Notes: the campaign received its first major update in decade with version 0.99.0. The entire game has been significantly rewritten from the immediately preceding version, so save files for some scenarios may not work properly. However, no errors have been identified so far in the development environment.
+
+This campaign is an indirect prequel to Invasion from the Unknown and After the Storm. Therefore, although it is not required, you may become more familiar with the characters and historical events if you play those two prior to this campaign.
+
+The difficulty Develop is for testing by the developers. Basically, it is intended for playtesting the AI-based Beginner difficulty. Therefore, it is not recommended to play on this difficulty, especially for the regular player."
         [/part]
-#endif
         [part]
             music=underground.ogg
             story= _ "At the great battle at the Stone of Erzen, the brothers Gwiti and Nati Ha’atel showed their skills for the first time: believing that their side was losing the battle, they called upon the corpses of former enemies to rise again and fight on their side."
@@ -147,7 +149,7 @@
     [/story]
 #enddef
 
-#define STORYTXT_LANDFALL
+#define STORYTXT_FEAR_THE_UNLIVING
     [story]
         [part]
             story= _ "With the magi out of the way, Gwiti was ready to begin his invasion, starting at the city of Aldril."
@@ -156,7 +158,7 @@
     [/story]
 #enddef
 
-#define STORYTXT_AMBUSH
+#define STORYTXT_A_FATED_CLASH
     [story]
         [part]
             story= _ "Unknown to Gwiti, several magi present on Alduin had survived his attack. Faced with the danger beyond their own ability, they contacted outside help, the slayer of the necromancer-emperor."
@@ -172,7 +174,7 @@
     [/story]
 #enddef
 
-#define STORYTXT_GLYNS_FOREST
+#define STORYTXT_AT_THE_END_OF_BLOOD
     [story]
         [part]
             story= _ "An unexpected confrontation with Morgorath weakened Gwiti’s forces. He fled to the northeast, deciding to proceed in hiding into Glyn’s Forest."
@@ -193,6 +195,17 @@
         [part]
             story= _ "He spent months evading patrols while trying to build his strength back up. Eventually, he was hunted down by an elf he recognized."
             {TDH_BIGMAP}
+        [/part]
+    [/story]
+#enddef
+
+#define STORYTXT_SHOWDOWN_IN_THE_SHADOWS
+    [story]
+        [part]
+            story= _ "But shortly before his doom, Gwiti was transported to another realm by an unknown power..."
+        [/part]
+        [part]
+            story= _ "And then he awoke."
         [/part]
     [/story]
 #enddef
