--- a/scenarios/01_A_New_Chance.cfg
+++ b/scenarios/01_A_New_Chance.cfg
@@ -20,7 +20,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        controller=human
+        {CONTROLLER 3 3}
         recruit=Walking Corpse,Skeleton,Skeleton Archer,Ghost
         {TDH_GOLD 160 140 120 100}
         {TDH_INCOME 8 6 4 2}
