--- a/scenarios/02_Brother_Against_Brother.cfg
+++ b/scenarios/02_Brother_Against_Brother.cfg
@@ -37,7 +37,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        controller=human
+        {CONTROLLER 7 22}
         {TDH_GOLD 180 160 140 120}
         {TDH_INCOME 8 6 4 2}
         user_team_name= _ "team_name^Gwiti"
@@ -208,6 +208,7 @@
             message= _ "Anyone who stands in my way will be burned to ashes!"
         [/message]
     [/event]
+
     [event]
         name=attack
         [filter]
