--- a/scenarios/03_Skull_of_Morgorath.cfg
+++ b/scenarios/03_Skull_of_Morgorath.cfg
@@ -22,7 +22,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        controller=human
+        {CONTROLLER 56 14}
         {TDH_GOLD 180 160 140 120}
         {TDH_INCOME 8 6 4 2}
         user_team_name= _ "team_name^Gwiti"
