--- a/scenarios/05_Inside_The_Tower.cfg
+++ b/scenarios/05_Inside_The_Tower.cfg
@@ -23,7 +23,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        controller=human
+        {CONTROLLER 28 4}
         gold=0
         village_gold=0
         income=-2
