--- a/scenarios/06_Crelanus_Book.cfg
+++ b/scenarios/06_Crelanus_Book.cfg
@@ -26,7 +26,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        controller=human
+        {CONTROLLER 10 2}
         {TDH_GOLD 140 120 100 80}
         {TDH_INCOME 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
