--- a/scenarios/08_Underground_Pool.cfg
+++ b/scenarios/08_Underground_Pool.cfg
@@ -26,7 +26,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        controller=human
+        {CONTROLLER 7 1}
         {TDH_GOLD 160 140 120 100}
         {TDH_INCOME 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
