--- a/scenarios/09_Underground_River.cfg
+++ b/scenarios/09_Underground_River.cfg
@@ -21,7 +21,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        controller=human
+        {CONTROLLER 24 3}
         {TDH_GOLD 160 140 120 100}
         {TDH_INCOME 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
@@ -191,6 +191,7 @@
         [sound]
             name=gold.ogg
         [/sound]
+
         [floating_text]
             x=$x1
             y=$y1
