--- a/scenarios/09x_Inter.cfg
+++ b/scenarios/09x_Inter.cfg
@@ -20,7 +20,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        controller=human
+        {CONTROLLER 24 3}
         gold=0
         village_gold=0
         income=-2
@@ -222,7 +222,6 @@
         [message]
             speaker="Gwiti Ha'atel"
             message= _ "Great."
-            sound=lich-die.ogg
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
