--- a/scenarios/10_Return_to_the_Northlands.cfg
+++ b/scenarios/10_Return_to_the_Northlands.cfg
@@ -19,7 +19,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        controller=human
+        {CONTROLLER 33 29}
         recruit=Dark Adept,Walking Corpse,Skeleton,Skeleton Archer,Vampire Bat,Ghost,Ghoul
         {TDH_GOLD 220 200 180 160}
         {TDH_INCOME 6 4 2 0}
@@ -272,8 +272,8 @@
             id="Gwiti Ha'atel"
         [/filter]
         [message]
-            speaker="Gwiti Ha'atel"
-            message= _ "What? I can’t die! Noooo!"
+            speaker=unit
+            message= _ "I perish here and now, darkness embraces me forever..."
         [/message]
         [endlevel]
             result=defeat
