--- a/scenarios/07_Confrontation.cfg
+++ b/scenarios/07_Confrontation.cfg
@@ -21,7 +21,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        controller=human
+        {CONTROLLER 9 1}
         {TDH_GOLD 180 160 140 120}
         {TDH_INCOME 8 6 4 2}
         user_team_name= _ "team_name^Gwiti"
