--- a/_main.cfg
+++ b/_main.cfg
@@ -49,7 +49,7 @@
 #enddef
 
 [campaign]
-    {CAMPAIGN_THE_DARK_HORDES_MENU_ENTRY_SHAREDINFO 1 ( _ "Part One") ( _ "Lead fugitive necromancer Gwiti Ha’atel to mastery of the undead hordes.")}
+    {CAMPAIGN_THE_DARK_HORDES_MENU_ENTRY_SHAREDINFO 1 ( _ "Part One") ( _ "Lead fugitive dark sorcerer Gwiti Ha’atel to mastery of the undead hordes.")}
 
     first_scenario=01_A_New_Chance
     start_year="1095 YW"
@@ -59,7 +59,7 @@
     background="story/landscape-mountains-04.webp"
 [/campaign]
 [campaign]
-    {CAMPAIGN_THE_DARK_HORDES_MENU_ENTRY_SHAREDINFO 2 ( _ "Part Two") ( _ "Lead fugitive necromancer Gwiti Ha’atel to mastery of the undead hordes.")}
+    {CAMPAIGN_THE_DARK_HORDES_MENU_ENTRY_SHAREDINFO 2 ( _ "Part Two") ( _ "Lead fugitive dark sorcerer Gwiti Ha’atel to mastery of the undead hordes.")}
 
     first_scenario=10_Return_to_the_Northlands
     start_year="1099 YW"
