--- a/about.cfg
+++ b/about.cfg
@@ -39,3 +39,12 @@
         name="Orcish Shyde"
     [/entry]
 [/about]
+[about]
+    title= _ "Additional thanks to"
+    [entry]
+        name="Refumee"
+    [/entry]
+    [entry]
+        name="Tahsin Jahin Khalid (Lord-Knightmare)"
+    [/entry]
+[/about]
