--- a/_main.cfg
+++ b/_main.cfg
@@ -41,7 +41,7 @@
     description={PART_DESCRIPTION}+"
 
 "+ _ "(Intermediate level, 9 scenarios.)"+"
-<span color='#888' size='smaller'>
+<span color='#a69275' size='smaller'>
 "+ _ "Version"+" {~add-ons/The_Dark_Hordes/metatags/VERSION} "+ _ "for Wesnoth 1.18.2 and later"+"
 "+ _ "Feedback and bug reports:"+" https://r.wesnoth.org/t58957"+"</span>"
 
@@ -123,6 +123,20 @@
 
 {~add-ons/The_Dark_Hordes/maps}
 {~add-ons/The_Dark_Hordes/scenarios}
+#endif
+
+#ifdef EDITOR
+[binary_path]
+    path=data/add-ons/The_Dark_Hordes
+[/binary_path]
+
+[editor_group]
+    id=wesnoth-UMC-The_Dark_Hordes
+    name= _ "The Dark Hordes (custom terrains)"
+    icon="group_custom"
+[/editor_group]
+
+{~add-ons/The_Dark_Hordes/macros/terrain.cfg}
 #endif
 
 # wmllint: directory spellings Gwiti Nati Morgorath Tanar
