--- a/macros/storytxt.cfg
+++ b/macros/storytxt.cfg
@@ -169,6 +169,7 @@
 #define STORYTXT_AT_THE_END_OF_BLOOD
     [story]
         [part]
+            music=journeys_end.ogg
             story= _ "An unexpected confrontation with Morgorath weakened Gwiti’s forces. He fled to the northeast, deciding to proceed in hiding into Glyn’s Forest."
         [/part]
     [/story]
@@ -177,6 +178,7 @@
 #define STORYTXT_REVELATIONS
     [story]
         [part]
+            music=revelation.ogg
             story= _ "Gwiti survived being turned on by the orcs and managed to escape eastwards."
             {TDH_BIGMAP}
         [/part]
