--- a/scenarios/03_Skull_of_Morgorath.cfg
+++ b/scenarios/03_Skull_of_Morgorath.cfg
@@ -5,7 +5,7 @@
     name= _ "The Skull of Morgorath"
     next_scenario=04_Mages_And_Elves
     map_file=03_Skull_of_Morgorath.map
-    {TDH_TURNS 38 34 30 26}
+    {TDH_TURNS 38 34 30 26 22}
     {DEFAULT_SCHEDULE_MORNING}
 
     {STORYTXT_SKULL_OF_MORGORATH}
@@ -22,9 +22,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 56 14}
-        {TDH_GOLD 180 160 140 120}
-        {TDH_INCOME 8 6 4 2}
+        controller=human
+        {TDH_GOLD 180 160 140 120 100}
+        {TDH_INCOME 8 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=se
         {FLAG_VARIANT undead}
@@ -44,8 +44,8 @@
         [/ai]
 
         recruit=Orcish Warrior,Orcish Grunt,Wolf Rider,Orcish Archer,Troll Whelp
-        {TDH_GOLD 0 20 40 60}
-        {TDH_INCOME 0 2 4 6}
+        {TDH_GOLD 0 20 40 60 80}
+        {TDH_INCOME 0 2 4 6 8}
         team_name=enemies
         user_team_name= _ "team_name^Orcs"
         facing=se
@@ -66,8 +66,8 @@
         [/ai]
 
         recruit=Orcish Grunt,Wolf Rider,Orcish Archer,Troll Whelp
-        {TDH_GOLD 20 40 60 80}
-        {TDH_INCOME -2 0 2 4}
+        {TDH_GOLD 20 40 60 80 100}
+        {TDH_INCOME -2 0 2 4 6}
         team_name=enemies
         user_team_name= _ "team_name^Orcs"
         facing=se
@@ -88,8 +88,8 @@
         [/ai]
 
         recruit=Orcish Warrior,Orcish Grunt,Wolf Rider,Orcish Archer,Troll
-        {TDH_GOLD 20 40 60 80}
-        {TDH_INCOME -2 0 2 4}
+        {TDH_GOLD 20 40 60 80 100}
+        {TDH_INCOME -2 0 2 4 6}
         team_name=enemies
         user_team_name= _ "team_name^Orcs"
         facing=se
