--- a/scenarios/05_Inside_The_Tower.cfg
+++ b/scenarios/05_Inside_The_Tower.cfg
@@ -6,7 +6,7 @@
     next_scenario=06_Crelanus_Book
     victory_when_enemies_defeated=no
     map_file=05_Inside_The_Tower.map
-    {TDH_TURNS 54 50 46 40}
+    {TDH_TURNS 54 50 46 40 34}
     {UNDERGROUND}
 
     {SCENARIO_MUSIC snowfall.ogg}
@@ -23,7 +23,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 28 4}
+        controller=human
         gold=0
         village_gold=0
         income=-2
@@ -47,8 +47,8 @@
         [/ai]
 
         recruit=Mage
-        {TDH_GOLD -10 0 10 20}
-        {TDH_INCOME -2 0 2 4}
+        {TDH_GOLD -10 0 10 20 30}
+        {TDH_INCOME -2 0 2 4 6}
         user_team_name= _ "team_name^Magi"
         facing=sw
         {FLAG_VARIANT loyalist}
@@ -154,7 +154,7 @@
             [/modifications]
         [/unit]
 
-#ifndef HARD
+#ifndef NIGHTMARE
         {GENERIC_UNIT 1 (Skeleton) 26 33}
         {GENERIC_UNIT 1 (Skeleton) 27 34}
 
