--- a/scenarios/06_Crelanus_Book.cfg
+++ b/scenarios/06_Crelanus_Book.cfg
@@ -6,7 +6,7 @@
     next_scenario=07_Confrontation
     victory_when_enemies_defeated=no
     map_file=06_Crelanus_Book.map
-    {TDH_TURNS 30 28 26 24}
+    {TDH_TURNS 30 28 26 24 22}
     {DEFAULT_SCHEDULE_DUSK}
 
     {INTRO_AND_SCENARIO_MUSIC the_dangerous_symphony.ogg elvish-theme.ogg}
@@ -26,9 +26,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 10 2}
-        {TDH_GOLD 140 120 100 80}
-        {TDH_INCOME 6 4 2 0}
+        controller=human
+        {TDH_GOLD 140 120 100 80 60}
+        {TDH_INCOME 6 4 2 0 -2}
         user_team_name= _ "team_name^Gwiti"
         facing=sw
         {FLAG_VARIANT undead}
@@ -48,8 +48,8 @@
         [/ai]
 
         recruit=Elvish Fighter,Elvish Captain,Elvish Archer,Elvish Shaman
-        {TDH_GOLD 60 80 100 120}
-        {TDH_INCOME 4 6 8 10}
+        {TDH_GOLD 60 80 100 120 140}
+        {TDH_INCOME 4 6 8 10 12}
         team_name=enemies
         user_team_name= _ "team_name^Elves"
         facing=sw
@@ -77,8 +77,8 @@
         [/ai]
 
         recruit=Orcish Grunt,Wolf Rider,Orcish Archer,Troll Whelp
-        {TDH_GOLD 60 80 100 120}
-        {TDH_INCOME 4 6 8 10}
+        {TDH_GOLD 60 80 100 120 140}
+        {TDH_INCOME 4 6 8 10 12}
         team_name=enemies
         user_team_name= _ "team_name^Orcs"
         facing=se
@@ -212,7 +212,6 @@
             message= _ "I die an awful death... not knowing why."
         [/message]
     [/event]
-
     [event]
         name=last breath
         [filter]
