--- a/scenarios/07_Confrontation.cfg
+++ b/scenarios/07_Confrontation.cfg
@@ -6,7 +6,7 @@
     next_scenario=08_Underground_Pool
     victory_when_enemies_defeated=no
     map_file=07_Confrontation.map
-    {TDH_TURNS 30 26 22 18}
+    {TDH_TURNS 28 26 24 20 18}
     {DEFAULT_SCHEDULE_DAWN}
 
     {STORYTXT_CONFRONTATION}
@@ -21,9 +21,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 9 1}
-        {TDH_GOLD 180 160 140 120}
-        {TDH_INCOME 8 6 4 2}
+        controller=human
+        {TDH_GOLD 180 160 140 120 100}
+        {TDH_INCOME 8 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=sw
         {FLAG_VARIANT undead}
@@ -43,8 +43,8 @@
         [/ai]
 
         recruit=Mage,Cavalryman,Fencer,Bowman,Spearman
-        {TDH_GOLD 150 200 250 300}
-        {TDH_INCOME 10 15 20 25}
+        {TDH_GOLD 150 200 250 300 350}
+        {TDH_INCOME 10 15 20 25 30}
         team_name=mages
         user_team_name= _ "team_name^Wesnothians"
         facing=se
