--- a/scenarios/08_Underground_Pool.cfg
+++ b/scenarios/08_Underground_Pool.cfg
@@ -6,7 +6,7 @@
     next_scenario=09_Underground_River
     victory_when_enemies_defeated=no
     map_file=08_Underground_Pool.map
-    {TDH_TURNS 46 42 38 34}
+    {TDH_TURNS 46 42 38 34 30}
     {UNDERGROUND}
 
     {INTRO_AND_SCENARIO_MUSIC revelation.ogg underground.ogg}
@@ -26,9 +26,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 7 1}
-        {TDH_GOLD 160 140 120 100}
-        {TDH_INCOME 6 4 2 0}
+        controller=human
+        {TDH_GOLD 160 140 120 100 80}
+        {TDH_INCOME 8 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=nw
         shroud=yes
@@ -49,8 +49,8 @@
         [/ai]
 
         recruit=Dwarvish Ulfserker
-        {TDH_GOLD 0 10 20 30}
-        {TDH_INCOME 2 4 6 8}
+        {TDH_GOLD 0 10 20 30 40}
+        {TDH_INCOME 2 4 6 8 10}
         team_name=enemies
         user_team_name= _ "team_name^Dwarves"
         facing=se
@@ -75,8 +75,8 @@
         [/ai]
 
         recruit=Dwarvish Fighter,Dwarvish Thunderer
-        {TDH_GOLD -10 0 10 20}
-        {TDH_INCOME 0 2 4 6}
+        {TDH_GOLD -10 0 10 20 30}
+        {TDH_INCOME 0 2 4 6 8}
         team_name=enemies
         user_team_name= _ "team_name^Dwarves"
         facing=se
