--- a/scenarios/09x_Inter.cfg
+++ b/scenarios/09x_Inter.cfg
@@ -20,7 +20,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 24 3}
+        controller=human
         gold=0
         village_gold=0
         income=-2
@@ -173,7 +173,6 @@
             fire_event=no
             animate=no
         [/kill]
-
         [kill]
             x,y=25,4
             fire_event=no
