--- a/scenarios/10_Return_to_the_Northlands.cfg
+++ b/scenarios/10_Return_to_the_Northlands.cfg
@@ -6,7 +6,7 @@
     next_scenario=11_An_Orcish_Coup
     victory_when_enemies_defeated=no
     map_file=10_Return_to_the_Northlands.map
-    {TDH_TURNS 34 32 30 28}
+    {TDH_TURNS 36 34 32 30 28}
     {DEFAULT_SCHEDULE_DAWN}
 
     {STORYTXT_RETURN_TO_THE_NORTHLANDS}
@@ -19,10 +19,10 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 33 29}
+        controller=human
         recruit=Dark Adept,Walking Corpse,Skeleton,Skeleton Archer,Vampire Bat,Ghost,Ghoul
-        {TDH_GOLD 220 200 180 160}
-        {TDH_INCOME 6 4 2 0}
+        {TDH_GOLD 220 200 180 160 140}
+        {TDH_INCOME 8 6 4 2 0}
         team_name=undead
         user_team_name= _ "team_name^Gwiti"
         facing=nw
@@ -37,8 +37,8 @@
         side=2
         controller=human
         recruit=Orcish Grunt,Orcish Archer,Orcish Assassin,Goblin Spearman,Troll Whelp,Wolf Rider
-        {TDH_GOLD 260 240 220 200}
-        {TDH_INCOME 6 4 2 0}
+        {TDH_GOLD 260 240 220 200 180}
+        {TDH_INCOME 8 6 4 2 0}
         team_name=undead
         user_team_name= _ "team_name^Tanar"
         facing=nw
@@ -62,8 +62,8 @@
         [/ai]
 
         recruit=Orcish Warrior,Orcish Grunt,Orcish Crossbowman,Orcish Archer,Orcish Assassin,Troll Whelp
-        {TDH_GOLD 440 520 600 680}
-        {TDH_INCOME 0 6 12 18}
+        {TDH_GOLD 360 440 520 600 680}
+        {TDH_INCOME 0 6 12 18 24}
         team_name=orcs
         user_team_name= _ "team_name^Orcs"
         facing=se
@@ -82,7 +82,7 @@
             profile=portraits/tanar.png
             canrecruit=yes
             side=2
-            {TDH_QUANTITY experience 40 32 24 16}
+            {TDH_QUANTITY experience 40 32 24 16 8}
             facing=ne
             placement=leader
             [modifications]
@@ -98,11 +98,11 @@
 
         [gold]
             side=1
-            {TDH_QUANTITY amount 260 240 220 200}
+            {TDH_QUANTITY amount 260 240 220 200 180}
         [/gold]
         [gold]
             side=2
-            {TDH_QUANTITY amount 220 200 180 160}
+            {TDH_QUANTITY amount 220 200 180 160 140}
         [/gold]
 #else
         [disallow_recruit]
