--- a/scenarios/11_An_Orcish_Coup.cfg
+++ b/scenarios/11_An_Orcish_Coup.cfg
@@ -5,7 +5,7 @@
     name= _ "An Orcish Coup"
     next_scenario=12_Assault_on_Alduin
     map_file=11_An_Orcish_Coup.map
-    {TDH_TURNS 36 32 28 24}
+    {TDH_TURNS 40 36 32 28 24}
     {DEFAULT_SCHEDULE_DUSK}
 
     {INTRO_AND_SCENARIO_MUSIC battle-epic.ogg northerners.ogg}
@@ -27,9 +27,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 27 30}
-        {TDH_GOLD 180 160 140 120}
-        {TDH_INCOME 6 4 2 0}
+        controller=human
+        {TDH_GOLD 200 180 160 140 120}
+        {TDH_INCOME 8 6 4 2 0}
         team_name=undead
         user_team_name= _ "team_name^Gwiti"
         facing=nw
@@ -44,8 +44,8 @@
         profile=portraits/tanar.png
         side=2
         controller=human
-        {TDH_GOLD 180 160 140 120}
-        {TDH_INCOME 6 4 2 0}
+        {TDH_GOLD 200 180 160 140 120}
+        {TDH_INCOME 8 6 4 2 0}
         team_name=undead
         user_team_name= _ "team_name^Tanar"
         facing=nw
@@ -67,8 +67,8 @@
         [/ai]
 
         recruit=Orcish Grunt,Orcish Archer,Orcish Assassin,Orcish Warrior,Orcish Crossbowman,Orcish Slayer
-        {TDH_GOLD 60 80 100 120}
-        {TDH_INCOME 10 30 50 70}
+        {TDH_GOLD 40 60 80 100 120}
+        {TDH_INCOME 10 30 50 70 90}
         team_name=orcs
         user_team_name= _ "team_name^Orcs"
         facing=sw
@@ -90,8 +90,8 @@
         [/ai]
 
         recruit=Troll,Troll Rocklobber,Troll Whelp,Orcish Grunt,Orcish Warrior,Orcish Archer
-        {TDH_GOLD 60 80 100 120}
-        {TDH_INCOME 10 30 50 70}
+        {TDH_GOLD 40 60 80 100 120}
+        {TDH_INCOME 10 30 50 70 90}
         team_name=orcs
         user_team_name= _ "team_name^Orcs"
         facing=se
@@ -113,8 +113,8 @@
         [/ai]
 
         recruit=Orcish Warrior,Orcish Grunt,Orcish Archer,Orcish Assassin,Goblin Spearman,Goblin Rouser,Goblin Spearman,Wolf Rider
-        {TDH_GOLD 60 80 100 120}
-        {TDH_INCOME 10 30 50 70}
+        {TDH_GOLD 40 60 80 100 120}
+        {TDH_INCOME 10 30 50 70 90}
         team_name=orcs
         user_team_name= _ "team_name^Orcs"
         facing=se
@@ -494,6 +494,7 @@ Enemy units can only see this unit during the day, or if they have units next to
 
     [event]
         name=victory
+
         {FULL_HEAL side=2}
 
         [store_unit]
