--- a/scenarios/12_Assault_on_Alduin.cfg
+++ b/scenarios/12_Assault_on_Alduin.cfg
@@ -5,7 +5,7 @@
     name= _ "Assault on Alduin"
     next_scenario=13_Fear_the_Unliving
     map_file=12_Assault_on_Alduin.map
-    {TDH_TURNS 36 32 28 24}
+    {TDH_TURNS 40 36 32 28 24}
     {DEFAULT_SCHEDULE_SECOND_WATCH}
 
     {INTRO_AND_SCENARIO_MUSIC the_dangerous_symphony.ogg loyalists.ogg}
@@ -26,9 +26,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 8 26}
-        {TDH_GOLD 160 140 120 100}
-        {TDH_INCOME 6 4 2 0}
+        controller=human
+        {TDH_GOLD 180 160 140 120 100}
+        {TDH_INCOME 8 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=se
         fog=yes
@@ -48,8 +48,8 @@
         [/ai]
 
         recruit=Red Mage,White Mage,Mage
-        {TDH_GOLD 80 100 120 140}
-        {TDH_INCOME 2 4 6 8}
+        {TDH_GOLD 60 80 100 120 140}
+        {TDH_INCOME 0 2 4 6 8}
         team_name=mages
         user_team_name= _ "team_name^Magi"
         {FLAG_VARIANT loyalist}
@@ -82,8 +82,8 @@
         [/ai]
 
         recruit=White Mage,Mage
-        {TDH_GOLD 80 100 120 140}
-        {TDH_INCOME 0 2 4 6}
+        {TDH_GOLD 60 80 100 120 140}
+        {TDH_INCOME 0 2 4 6 8}
         team_name=mages
         user_team_name= _ "team_name^Magi"
         {FLAG_VARIANT loyalist}
@@ -103,8 +103,8 @@
         [/ai]
 
         recruit=Red Mage,Mage
-        {TDH_GOLD 80 100 120 140}
-        {TDH_INCOME 0 2 4 6}
+        {TDH_GOLD 60 80 100 120 140}
+        {TDH_INCOME 0 2 4 6 8}
         team_name=mages
         user_team_name= _ "team_name^Magi"
         {FLAG_VARIANT loyalist}
@@ -123,8 +123,8 @@
         [/ai]
 
         recruit=Red Mage,White Mage,Mage
-        {TDH_GOLD 80 100 120 140}
-        {TDH_INCOME 0 2 4 6}
+        {TDH_GOLD 60 80 100 120 140}
+        {TDH_INCOME 0 2 4 6 8}
         team_name=mages
         user_team_name= _ "team_name^Magi"
         {FLAG_VARIANT loyalist}
