--- a/scenarios/13_Fear_the_Unliving.cfg
+++ b/scenarios/13_Fear_the_Unliving.cfg
@@ -5,7 +5,7 @@
     name= _ "Fear the Unliving"
     next_scenario=14_A_Fated_Clash
     map_file=13_Fear_the_Unliving.map
-    {TDH_TURNS 34 32 30 28}
+    {TDH_TURNS 34 32 30 28 26}
     {DEFAULT_SCHEDULE_DUSK}
 
     {INTRO_AND_SCENARIO_MUSIC revelation.ogg weight_of_revenge.ogg}
@@ -29,9 +29,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 10 20}
-        {TDH_GOLD 160 140 120 100}
-        {TDH_INCOME 6 4 2 0}
+        controller=human
+        {TDH_GOLD 180 160 140 120 100}
+        {TDH_INCOME 6 4 2 0 -2}
         team_name=undead
         user_team_name= _ "team_name^Gwiti"
         facing=ne
@@ -59,8 +59,8 @@
         [/ai]
 
         recruit=Swordsman,Pikeman,Master Bowman,Shock Trooper,Duelist
-        {TDH_GOLD 80 100 120 140}
-        {TDH_INCOME 2 4 6 8}
+        {TDH_GOLD 80 100 120 140 160}
+        {TDH_INCOME 2 4 6 8 10}
         team_name=enemies
         user_team_name= _ "team_name^Wesnothians"
         facing=sw
@@ -91,8 +91,8 @@
         [/ai]
 
         recruit=Cavalryman,Swordsman,Mage,Fencer,Duelist,Longbowman
-        {TDH_GOLD 60 80 100 120}
-        {TDH_INCOME 0 2 4 6}
+        {TDH_GOLD 60 80 100 120 140}
+        {TDH_INCOME 0 2 4 6 8}
         team_name=enemies
         user_team_name= _ "team_name^Wesnothians"
         facing=sw
@@ -116,8 +116,8 @@
         [/ai]
 
         recruit=Cavalryman,Swordsman,Mage,Fencer,Duelist,Longbowman
-        {TDH_GOLD 60 80 100 120}
-        {TDH_INCOME 4 6 8 10}
+        {TDH_GOLD 60 80 100 120 140}
+        {TDH_INCOME 2 4 6 8 10}
         team_name=enemies
         user_team_name= _ "team_name^Wesnothians"
         facing=se
@@ -140,7 +140,7 @@
         [/ai]
 
         recruit=Merman Hunter,Merman Fighter,Mermaid Initiate
-        {TDH_GOLD 100 120 140 160}
+        {TDH_GOLD 80 100 120 140 160}
         income=-2
         team_name=enemies
         user_team_name= _ "team_name^Merfolk"
@@ -287,7 +287,7 @@
         [modify_side]
             side=5
             hidden=no
-            {TDH_INCOME 4 6 8 10}
+            {TDH_INCOME 2 4 6 8 10}
         [/modify_side]
 
         [terrain]
