--- a/scenarios/15_The_Crown_Prince.cfg
+++ b/scenarios/15_The_Crown_Prince.cfg
@@ -5,7 +5,7 @@
     name= _ "The Crown Prince"
     next_scenario=16_At_the_End_of_Blood
     map_file=15_The_Crown_Prince.map
-    {TDH_TURNS 36 32 28 24}
+    {TDH_TURNS 40 36 32 28 24}
     {DEFAULT_SCHEDULE_DAWN}
 
     {INTRO_AND_SCENARIO_MUSIC loyalists.ogg elvish-theme.ogg}
@@ -24,9 +24,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 3 3}
-        {TDH_GOLD 160 140 120 100}
-        {TDH_INCOME 6 4 2 0}
+        controller=human
+        {TDH_GOLD 180 160 140 120 100}
+        {TDH_INCOME 8 6 4 2 0}
         team_name=undead
         user_team_name= _ "team_name^Gwiti"
         facing=se
@@ -46,8 +46,8 @@
         [/ai]
 
         recruit=Cavalryman,Swordsman,Mage,Fencer,Duelist,Longbowman
-        {TDH_GOLD 250 300 350 400}
-        {TDH_INCOME 15 20 25 30}
+        {TDH_GOLD 200 250 300 350 400}
+        {TDH_INCOME 10 15 20 25 30}
         team_name=enemies
         user_team_name= _ "team_name^Wesnothians"
         facing=nw
@@ -94,7 +94,7 @@
         [/ai]
 
         recruit=Revenant,Bone Shooter,Wraith
-        {TDH_GOLD 150 200 250 300}
+        {TDH_GOLD 100 150 200 250 300}
         income=-2
         team_name=morgorath
         user_team_name= _ "team_name^Morgorath"
@@ -268,7 +268,7 @@
         [modify_side]
             side=3
             hidden=no
-            {TDH_INCOME 10 30 50 70}
+            {TDH_INCOME 10 30 50 70 90}
         [/modify_side]
 
         {MODIFY_UNIT (id=Morgorath) side 3}
@@ -419,7 +419,7 @@
             [filter_second]
                 id=Morgorath
             [/filter_second]
-            {TDH_QUANTITY amount 0 1 2 3}
+            {TDH_QUANTITY amount 0 1 2 3 4}
             damage_type=arcane
         [/harm_unit]
     [/event]
