--- a/scenarios/17_Revelations.cfg
+++ b/scenarios/17_Revelations.cfg
@@ -5,7 +5,7 @@
     name= _ "Revelations"
     next_scenario=18_Showdown_in_the_Shadows
     map_file=17_Revelations.map
-    {TDH_TURNS 38 34 30 26}
+    {TDH_TURNS 42 38 34 30 26}
     {DEFAULT_SCHEDULE_DUSK}
 
     {STORYTXT_REVELATIONS}
@@ -23,9 +23,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 26 27}
-        {TDH_GOLD 180 160 140 120}
-        {TDH_INCOME 6 4 2 0}
+        controller=human
+        {TDH_GOLD 180 160 140 120 100}
+        {TDH_INCOME 8 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=nw
         {FLAG_VARIANT undead}
@@ -46,8 +46,8 @@
         [/ai]
 
         recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Ranger,Elvish Rider,Elvish Shaman,Elvish Druid,Elvish Sorceress
-        {TDH_GOLD 140 180 220 260}
-        {TDH_INCOME 2 6 10 14}
+        {TDH_GOLD 100 140 180 220 260}
+        {TDH_INCOME 2 6 10 14 18}
         team_name=elves
         user_team_name= _ "team_name^Elynia"
         facing=se
@@ -68,8 +68,8 @@
         [/ai]
 
         recruit=Cavalryman,Swordsman,Mage,Fencer,Duelist,Longbowman
-        {TDH_GOLD 100 140 180 220}
-        {TDH_INCOME 2 6 10 14}
+        {TDH_GOLD 80 100 140 180 220}
+        {TDH_INCOME 2 6 10 14 18}
         team_name=elves
         user_team_name= _ "team_name^Wesnothians"
         facing=sw
@@ -90,8 +90,8 @@
         [/ai]
 
         recruit=Cavalryman,Swordsman,Mage,Fencer,Duelist,Longbowman
-        {TDH_GOLD 140 180 220 260}
-        {TDH_INCOME 2 6 10 14}
+        {TDH_GOLD 100 140 180 220 260}
+        {TDH_INCOME 2 6 10 14 18}
         team_name=elves
         user_team_name= _ "team_name^Wesnothians"
         facing=se
