--- a/scenarios/18_Showdown_in_the_Shadows.cfg
+++ b/scenarios/18_Showdown_in_the_Shadows.cfg
@@ -20,7 +20,7 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 19 18}
+        controller=human
         gold=0
         village_gold=0
         income=-2
@@ -41,7 +41,7 @@
         [/ai]
 
         recruit=Revenant,Bone Shooter,Wraith
-        {TDH_GOLD 100 150 200 250}
+        {TDH_GOLD 100 150 200 250 300}
         income=-2
         user_team_name= _ "team_name^Morgorath"
         {FLAG_VARIANT undead}
@@ -92,8 +92,13 @@
         {LOYAL_GUARD_UNIT 2 (Skeleton) 10 14}
         {LOYAL_GUARD_UNIT 2 (Skeleton) 9 15}
 
+#ifdef NIGHTMARE
+        {LOYAL_GUARD_UNIT 2 (Wraith) 12 13}
+        {LOYAL_GUARD_UNIT 2 (Wraith) 13 14}
+#else
         {LOYAL_GUARD_UNIT 2 (Ghost) 12 13}
         {LOYAL_GUARD_UNIT 2 (Ghost) 13 14}
+#endif
 
         [unit]
             type=Revenant
@@ -450,7 +455,7 @@
         [modify_side]
             side=2
             hidden=no
-            {TDH_INCOME 0 4 8 12}
+            {TDH_INCOME 0 4 8 12 16}
         [/modify_side]
 
         {DELAY 2000}
