--- a/scenarios/02_Brother_Against_Brother.cfg
+++ b/scenarios/02_Brother_Against_Brother.cfg
@@ -5,7 +5,7 @@
     name= _ "Brother Against Brother"
     next_scenario=03_Skull_of_Morgorath
     map_file=02_Brother_Against_Brother.map
-    {TDH_TURNS 30 28 26 24}
+    {TDH_TURNS 30 28 26 24 22}
     {DAWN}
     {DAWN}
     {MORNING}
@@ -37,9 +37,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 7 22}
-        {TDH_GOLD 180 160 140 120}
-        {TDH_INCOME 8 6 4 2}
+        controller=human
+        {TDH_GOLD 180 160 140 120 100}
+        {TDH_INCOME 8 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=ne
         {FLAG_VARIANT undead}
@@ -61,8 +61,8 @@
         [/ai]
 
         recruit=Dark Adept,Ghost,Walking Corpse,Vampire Bat,Skeleton,Skeleton Archer
-        {TDH_GOLD 80 100 120 140}
-        {TDH_INCOME 4 6 8 10}
+        {TDH_GOLD 80 100 120 140 160}
+        {TDH_INCOME 4 6 8 10 12}
         user_team_name= _ "team_name^Nati"
         facing=sw
         {FLAG_VARIANT undead}
@@ -151,7 +151,7 @@
         [/message]
         [gold]
             side=2
-            {TDH_QUANTITY amount 0 20 40 60}
+            {TDH_QUANTITY amount 0 20 40 60 80}
         [/gold]
     [/event]
     [event]
@@ -208,7 +208,6 @@
             message= _ "Anyone who stands in my way will be burned to ashes!"
         [/message]
     [/event]
-
     [event]
         name=attack
         [filter]
