--- a/scenarios/04_Mages_And_Elves.cfg
+++ b/scenarios/04_Mages_And_Elves.cfg
@@ -5,7 +5,7 @@
     name= _ "Mages and Elves"
     next_scenario=05_Inside_The_Tower
     map_file=04_Mages_And_Elves.map
-    {TDH_TURNS 38 34 30 26}
+    {TDH_TURNS 38 34 30 26 22}
     {DEFAULT_SCHEDULE_DUSK}
 
     {INTRO_AND_SCENARIO_MUSIC elf-land.ogg loyalists.ogg}
@@ -27,9 +27,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 18 28}
-        {TDH_GOLD 180 160 140 120}
-        {TDH_INCOME 8 6 4 2}
+        controller=human
+        {TDH_GOLD 180 160 140 120 100}
+        {TDH_INCOME 8 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=se
         {FLAG_VARIANT undead}
@@ -49,8 +49,8 @@
         [/ai]
 
         recruit=Red Mage,White Mage,Mage,Swordsman,Spearman
-        {TDH_GOLD 60 80 100 120}
-        {TDH_INCOME 2 4 6 8}
+        {TDH_GOLD 60 80 100 120 140}
+        {TDH_INCOME 2 4 6 8 10}
         team_name=elves
         user_team_name= _ "team_name^Magi"
         facing=nw
@@ -71,8 +71,8 @@
         [/ai]
 
         recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Marksman,Elvish Scout,Elvish Druid
-        {TDH_GOLD 20 40 60 80}
-        {TDH_INCOME 0 2 4 6}
+        {TDH_GOLD 20 40 60 80 100}
+        {TDH_INCOME 0 2 4 6 8}
         team_name=elves
         user_team_name= _ "team_name^Elves"
         facing=nw
@@ -94,8 +94,8 @@
         [/ai]
 
         recruit=Elvish Fighter,Elvish Captain,Elvish Archer,Elvish Shaman
-        {TDH_GOLD 20 40 60 80}
-        {TDH_INCOME -2 0 2 4}
+        {TDH_GOLD 20 40 60 80 100}
+        {TDH_INCOME -2 0 2 4 6}
         team_name=elves
         user_team_name= _ "team_name^Elves"
         facing=nw
