--- a/scenarios/09_Underground_River.cfg
+++ b/scenarios/09_Underground_River.cfg
@@ -21,9 +21,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 24 3}
-        {TDH_GOLD 160 140 120 100}
-        {TDH_INCOME 6 4 2 0}
+        controller=human
+        {TDH_GOLD 180 160 140 120 100}
+        {TDH_INCOME 8 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=ne
         shroud=yes
@@ -45,8 +45,8 @@
         [/ai]
 
         recruit=Dwarvish Fighter,Dwarvish Guardsman,Dwarvish Thunderer,Dwarvish Ulfserker
-        {TDH_GOLD 40 60 80 100}
-        {TDH_INCOME 0 10 20 30}
+        {TDH_GOLD 40 60 80 100 120}
+        {TDH_INCOME 0 10 20 30 40}
         user_team_name= _ "team_name^Dwarves"
         facing=sw
         {FLAG_VARIANT knalgan}
@@ -80,8 +80,8 @@
         [/ai]
 
         recruit=Naga Fighter,Naga Warrior,Naga Guard,Naga Dirkfang
-        {TDH_GOLD 40 80 120 160}
-        {TDH_INCOME 0 10 20 30}
+        {TDH_GOLD 40 80 120 160 200}
+        {TDH_INCOME 0 10 20 30 40}
         user_team_name= _ "team_name^Naga"
         facing=nw
         {FLAG_VARIANT6 ragged}
@@ -447,7 +447,6 @@
             result=defeat
         [/endlevel]
     [/event]
-
     [event]
         name=last breath
         [filter]
