--- a/scenarios/14_A_Fated_Clash.cfg
+++ b/scenarios/14_A_Fated_Clash.cfg
@@ -25,9 +25,9 @@
         unrenamable=yes
         side=1
         canrecruit=yes
-        {CONTROLLER 18 19}
-        {TDH_GOLD 160 140 120 100}
-        {TDH_INCOME 6 4 2 0}
+        controller=human
+        {TDH_GOLD 180 160 140 120 100}
+        {TDH_INCOME 8 6 4 2 0}
         team_name=undead
         user_team_name= _ "team_name^Gwiti"
         facing=se
@@ -48,8 +48,8 @@
         [/ai]
 
         recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Ranger,Elvish Rider,Elvish Shaman,Elvish Druid,Elvish Sorceress
-        {TDH_GOLD 200 240 280 320}
-        {TDH_INCOME 0 10 30 50}
+        {TDH_GOLD 160 200 240 280 320}
+        {TDH_INCOME 0 10 30 50 70}
         team_name=elves
         user_team_name= _ "team_name^Elynia"
         facing=se
@@ -69,8 +69,8 @@
         [/ai]
 
         recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Ranger,Elvish Rider,Elvish Shaman,Elvish Druid,Elvish Sorceress
-        {TDH_GOLD 180 220 260 300}
-        {TDH_INCOME 0 10 30 50}
+        {TDH_GOLD 140 180 220 260 300}
+        {TDH_INCOME 0 10 30 50 70}
         team_name=elves
         user_team_name= _ "team_name^Elynia"
         facing=sw
